# peaknet-pipeline-ray

./: .gitignore  CLAUDE.md  DEV_GAP_2025_1001.md  DEV_PLAN_2025_1001.md  LESSONS_02.md  MIX_PRECISION.md  NOTES.md  PIN_MEMORY_ISSUE.md  PLAN_STREAM.md  PROMPTS.md  README.md  SOCKET_DATA_STARVATION_INVESTIGATION.md  STATUS.md  pyproject.toml  setup.py  test_channel_transform.py  test_coordination_timing.py  test_full_integration.py  test_pipeline_transforms.py  test_queue_config.py  test_streaming_pipeline.py
archive/lessons/: KNOWLEDGE-FIND-PEAKPOS.md  PLAN-Q2-CXI-WRITER-ARCH.md
examples/configs/: base.yaml  peaknet-no-transforms.yaml  peaknet-random-profile.yaml  peaknet-random.yaml  peaknet-socket-profile-673m.yaml  peaknet-socket-profile.yaml  peaknet-socket.yaml  peaknet.yaml  source-random.yaml  source-socket.yaml
lessons/: PLAN-Q2-CXI-WRITER-v2.md  RAY-BEST-PRACTICES-REVIEW.md
peaknet_pipeline_ray/: __init__.py  pipeline.py
peaknet_pipeline_ray/cli/: __init__.py  main.py
peaknet_pipeline_ray/config/: __init__.py  data_structures.py  peaknet_config.py  schemas.py
peaknet_pipeline_ray/core/: README.md  __init__.py  coordinator.py  data_producer.py  gpu_health_validator.py  lightweight_socket_producer.py  multithreaded_socket_producer.py  peaknet_pipeline.py  peaknet_profiler.py  peaknet_ray_data_producer.py  peaknet_ray_pipeline_actor.py  peaknet_utils.py  socket_hdf5_producer.py  socket_producer.py  streaming_producer.py
peaknet_pipeline_ray/utils/: __init__.py  queue.py
