[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "peaknet-pipeline-ray"
version = "0.1.0"
description = "Scalable PeakNet ML inference pipeline with Ray"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PeakNet Pipeline Team"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.10.0",
    "ray[default]>=2.0.0", 
    "pyyaml>=5.4.0",
    "numpy>=1.20.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

profiling = [
    "nvidia-ml-py3>=7.352.0",
]

[project.scripts]
peaknet-pipeline = "peaknet_pipeline_ray.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/peaknet-pipeline-ray"
Repository = "https://github.com/your-org/peaknet-pipeline-ray.git"
Issues = "https://github.com/your-org/peaknet-pipeline-ray/issues"

[tool.setuptools.package-data]
"peaknet_pipeline_ray" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]